# sfml-games

pong/: CMakeLists.txt  main.cc
pong/include/: ball.h  bat.h  hud.h  input_util.h
pong/src/: ball.cc  bat.cc  hud.cc
